--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,17 @@ a {
 
 * {
   box-sizing: border-box;
+  /* outline: 1px solid limegreen !important; */
+}
+
+
+#active-nav {
+  /* color: red; */
+  border-bottom: 2px solid white;
+}
+
+.page_content {
+  margin-top: 4.5em;
 }
 
 @media (prefers-color-scheme: dark) {
