--- a/components/searchComponent.module.css
+++ b/components/searchComponent.module.css
@@ -18,9 +18,16 @@
     background-color: green;
     color: white;
     border: none;
-    /* height: 40%; */
+    height: 2.5em;
+    font-size: 1.2em;
     padding: 0.6em 3em 0.6em 3em;
+    transition: 0.3s;
+    cursor: pointer;
 }
+.container button:hover {
+    background-color: rgb(5, 85, 5);
+}
+
 
 .topHalf {
     display: flex;
@@ -30,10 +37,31 @@
 .bottomHalf {
     display: flex;
     justify-content: space-around;
+    padding-bottom: 0.3em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
+.bottomHalf select {
+    margin-top: 0.5em;
+    padding: 0.5em;
+    border: none;
+    width: 100%;
+    font-weight: bolder;
+    font-size: 1em;
+    color: rgb(88, 88, 88);
+}
+
+
 .texts {
+    flex-direction: row;
     flex: 4;
+}
+
+.texts > hr {
+    margin: 0;
+    /* margin-top: -0.2em; */
+    padding: 0;
 }
 
 .showing_results {
