--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@ a {
   margin-top: 4.5em;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -34,4 +34,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
