--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -12,11 +12,16 @@
     margin-right: auto;
 }
 
+.card_container > img {
+    height: 15em;
+    width: 20em;
+}
+
 .card_container > p {
     padding-left: 0.5em;
     text-align: left;
     font-weight: bolder;
-    font-size: 1.1em;
+    font-size: clamp(0.9em, 1.2vw, 1.2em);
 }
 
 .card_container > p > span {
@@ -24,5 +29,18 @@
     display: block;
     padding-top: 1em;
     cursor: pointer;
+}
+
+@media screen and (max-width: 730px) {
+    .card_container {
+        flex-direction: column;
+        width: 80%;
+        margin-bottom: 8em;
+    }
+    .card_container > img {
+        width: 100%;
+        height: 80%;
+    }
+
 }
 
