--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -39,9 +39,55 @@
 }
 
 .bottomHalf > svg {
+    height: 50px;
+    width: 50px;
     cursor: pointer;
 }
 
 .bottomHalf > svg:hover {
     color: rgb(2, 99, 255);
+}
+
+@media screen and (max-width: 790px) {
+    .topHalf p {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        font-size: 0.93em;
+        width: 90%;
+    }
+    .topHalf > img {
+        background-color: red;
+        margin-left: auto;
+        margin-right: 1em;
+        width: 120px;
+        height: 28px;
+    }
+
+    .topHalf {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-left: 1em;
+        /* justify-content: space-around;
+        align-items: center; */
+    }   
+    .bottomHalf {
+        display: flex;
+        /* background-color: red; */
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: space-between;
+    }
+    .footer hr {
+        /* margin-left: 1em;
+        margin-right: 1em; */
+        margin: 2em 2em 2em 2em;
+    }
+    .bottomHalf > svg {
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+    }
 }
