--- a/components/searchComponent.module.css
+++ b/components/searchComponent.module.css
@@ -2,7 +2,8 @@
 .container {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 
     0 6px 10px 0 rgba(0, 0, 0, 0.19);
-    width: 40em;
+    /* width: 60%; */
+    width: 50em;
     margin-left: auto;
     margin-right: auto;
 }
@@ -30,6 +31,7 @@
 
 
 .topHalf {
+    font-size: 0.9em;
     display: flex;
     justify-content: space-around;
 }
@@ -43,13 +45,24 @@
 }
 
 .bottomHalf select {
+    flex: 1;
     margin-top: 0.5em;
     padding: 0.5em;
     border: none;
     width: 100%;
     font-weight: bolder;
-    font-size: 1em;
+    /* font-size: 1em; */
     color: rgb(88, 88, 88);
+}
+
+.bottomHalf input {
+    width: 12em;
+    padding-top: 0.6em;
+    padding-left: 1em;
+    border: none;
+    font-weight: bolder;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -73,5 +86,32 @@
     margin-top: 2em;
 }
 
+@media screen and (max-width: 850px) {
+    .container {
+        width: 95%;
+    }
+    .bottomHalf select {
+        /* background-color: red; */
+
+    }
+    .bottomHalf input {
+        /* background-color: green; */
+        padding-top: 0.6em;
+        padding-left: 1em;
+        border: none;
+        width: 10em;
+        font-weight: unset;
+        /* justify-content: unset;
+        align-items: unset; */
+    }
+}
+
+
+@media screen and (max-width:670px) {
+    .container_item {
+        display: grid;
+        grid-template-rows: auto auto;
+    }    
+}
 
 
