--- a/styles/SignupPage.module.css
+++ b/styles/SignupPage.module.css
@@ -1,5 +1,5 @@
 .page_content {
-    width: 30em;
+    width: 25em;
     margin: 7em auto 3em auto;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 
     0 6px 10px 0 rgba(0, 0, 0, 0.19);
@@ -75,6 +75,17 @@
     padding-left: 0.4em;
 }
 
+@media screen and (max-width: 495px) {
+    .page_content {
+        width: 85%;
+        padding-left: 1em;
+        padding-right: 1em;
+    }    
+    .page_content > p {
+        font-size: 0.9em;
+        font-weight: 600;
+    }
+}
 
 
 
