--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,18 @@ a {
 }
 
 .page_content {
-  margin-top: 4.5em;
+  margin-top: 4em;
+  padding: 0;
+}
+
+#open {
+  opacity: 1;
+  pointer-events: all;
+}
+
+#close {
+  opacity: 0;
+  pointer-events: none;
 }
 
 /* @media (prefers-color-scheme: dark) {
