--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -34,14 +34,15 @@
     align-items: center;
 }
 
-.nav_contents > p {
+.nav_contents > a > p{
+    padding-bottom: 0.2em;
     transition: 0.3s;
     cursor: pointer;
     border-bottom: 2px solid black;
     /* padding-bottom: 0.3em; */
 }
 
-.nav_contents > p:hover {
+.nav_contents > a > p:hover {
     border-bottom-color: white;
 }
 
@@ -60,14 +61,14 @@
     font-size: 1.1em;
 }
 
-.drop_down > p {
+.drop_down > a > p, .drop_down > p {
     transition: 0.2s;
     cursor: pointer;
     margin: 0;
     padding: 1em 1.3em 1em 1.3em;
 }
 
-.drop_down > p:hover {
+.drop_down > a > p:hover, .drop_down > p:hover {
     background-color: grey;
 }
 
@@ -97,7 +98,7 @@
         margin-right: 1.5em;
         cursor: pointer;
     }
-    .phone_nav p {
+    .phone_nav a, .phone_nav p {
         cursor: pointer;
     }
     .phone_nav {
