--- a/components/searchcomponent/searchComponent.module.css
+++ b/components/searchcomponent/searchComponent.module.css
@@ -111,7 +111,11 @@
     .container_item {
         display: grid;
         grid-template-rows: auto auto;
-    }    
+    }
+    .showing_results {
+        padding: 0.1em 3em 0.1em 3em;
+    }
+    
 }
 
 
