--- a/styles/LoginPage.module.css
+++ b/styles/LoginPage.module.css
@@ -8,6 +8,7 @@
     font-weight: bolder;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 
     0 6px 10px 0 rgba(0, 0, 0, 0.19);
+    position: relative;
 }
 
 .page_content > img {
@@ -38,7 +39,13 @@
     background-color: green;
     color: white;
     border: none;
+    cursor: pointer;
 }
+
+.form button:active {
+    background-color: rgb(7, 68, 7);
+}
+
 .form_item > label {
     margin-bottom: 0.6em;
     font-weight: bolder;
