--- a/styles/ReportPage.module.css
+++ b/styles/ReportPage.module.css
@@ -2,7 +2,8 @@
     display: flex;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 
     0 6px 10px 0 rgba(0, 0, 0, 0.19);
-    width: 60%;
+    /* width: 60%; */
+    width: 57em;
     font-weight: bolder;
     margin-left: auto;
     margin-right: auto;
@@ -80,4 +81,29 @@
     margin-bottom: 1.5em;
 }
 
+@media screen and (max-width: 995px) {
+    .page_container {
+        width: 93%;
+    }
+    .form_container {
+        flex: 1.3;
+        /* background-color: rgb(164, 48, 48); */
+        padding: 1.2em;
+        padding-bottom: 2em;
+    }
+}
 
+@media screen and (max-width: 790px) {
+    .page_container {
+        margin-top: 8em;
+        margin-bottom: 5em;
+        flex-direction: column;
+    }
+    .input_container {
+        /* flex: 1;
+        color: white;
+        background-color: rgb(72, 138, 177);
+        flex-direction: column; */
+        padding: 2em 1.3em;
+    }
+}
